--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,7 @@ dmypy.json
 
 # Pyre type checker
 faced_yolo
-faced_detector/models/*
+faced_detectors/models/*
 .pyre/
 models/*
 remove_initializer_from_input.py
